# Scalar-ai-project

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  test_env.py
env/: __init__.py  environment.py  grader.py  models.py  tasks.py
server/: app.py
