[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hospital-er-triage"
version = "1.0.0"
description = "Hospital Emergency Room Triage and Resource Management OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest"
]
